Rough outline considerations for proposal
Go back to report documentclass and format my authorship a bit better too

--- a/proposal.tex
+++ b/proposal.tex
@@ -1,5 +1,5 @@
 %%!TEX encoding = UTF-8 Unicode
-\documentclass[titlepage]{report}   	% use "amsart" instead of "article" for AMSLaTeX format
+\documentclass[titlepage]{article}   	% use "amsart" instead of "article" for AMSLaTeX format
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
@@ -13,7 +13,9 @@
 
 \title{OnStar for Bikes:\\
 	Automatic collision detection and response using embedded devices}
-\author{Justin A. S. Bull\\Department of Computer Science, Ryerson University}
+\author{Justin A. S. Bull\\
+	Department of Computer Science,\\
+	Ryerson University\\}
 %\date{}							% Activate to display a given date or no date
 
 \begin{document}
@@ -21,6 +23,38 @@
 %\section{}
 %\subsection{}
 
+\begin{abstract}
+TODO
+\end{abstract}
 
+\section{Narrative}
+
+\section{Device Components}
+\subsection{GPS Sensor}
+\subsection{GSM Module}
+\subsection{3-Dimensional Accelerometer}
+\subsection{Piezo Sensor}
+\subsection{SIM or Micro-SIM Card}
+\subsection{Activation Buzzer}
+\subsection{Lithium Ion Battery}
+
+\section{Physical Considerations}
+\subsection{Form Factor}
+\subsection{GPS Reliability}
+\subsection{Anti-Theft Measures}
+\subsection{Battery Time}
+
+\section{Calibration \& Data}
+\subsection{Police Collision Data}
+\subsection{False-Positive Mitigation}
+
+\section{Types of Collisions}
+\subsection{``T-Bone'' Collision}
+\subsection{``Head-On'' Collision}
+\subsection{``Rear-end'' Collision}
+
+\section[External Communication]{External Communication using GSM SMS to an external API}
+
+\section{Cost of Prototype / Sales Margin}
 
 \end{document}  
