Remove BS, add lipsum, add email

--- a/proposal.tex
+++ b/proposal.tex
@@ -1,60 +1,76 @@
 %%!TEX encoding = UTF-8 Unicode
-\documentclass[titlepage]{article}   	% use "amsart" instead of "article" for AMSLaTeX format
+\documentclass[titlepage]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-
-\usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
-\geometry{letterpaper}                   		% ... or a4paper or a5paper or ... 
-%\geometry{landscape}                		% Activate for for rotated page geometry
-%\usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
-\usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
-								% TeX will automatically convert eps --> pdf in pdflatex		
-\usepackage{amssymb}
+\usepackage{lipsum}
 
 \title{OnStar for Bikes:\\
 	Automatic collision detection and response using embedded devices}
 \author{Justin A. S. Bull\\
+	\texttt{justin.bull@ryerson.ca}\\
 	Department of Computer Science,\\
 	Ryerson University\\}
-%\date{}							% Activate to display a given date or no date
 
 \begin{document}
 \maketitle
-%\section{}
-%\subsection{}
 
 \begin{abstract}
-TODO
+\lipsum
 \end{abstract}
 
+\tableofcontents
+
 \section{Narrative}
+\lipsum[1]
 
 \section{Device Components}
+\lipsum[1]
 \subsection{GPS Sensor}
+\lipsum[1]
 \subsection{GSM Module}
+\lipsum[1]
 \subsection{3-Dimensional Accelerometer}
+\lipsum[1]
 \subsection{Piezo Sensor}
+\lipsum[1]
 \subsection{SIM or Micro-SIM Card}
+\lipsum[1]
 \subsection{Activation Buzzer}
+\lipsum[1]
 \subsection{Lithium Ion Battery}
+\lipsum[1]
 
 \section{Physical Considerations}
+\lipsum[1]
 \subsection{Form Factor}
+\lipsum[1]
 \subsection{GPS Reliability}
+\lipsum[1]
 \subsection{Anti-Theft Measures}
+\lipsum[1]
 \subsection{Battery Time}
+\lipsum[1]
 
 \section{Calibration \& Data}
+\lipsum[1]
 \subsection{Police Collision Data}
+\lipsum[1]
 \subsection{False-Positive Mitigation}
+\lipsum[1]
 
 \section{Types of Collisions}
+\lipsum[1]
 \subsection{``T-Bone'' Collision}
+\lipsum[1]
 \subsection{``Head-On'' Collision}
+\lipsum[1]
 \subsection{``Rear-end'' Collision}
+\lipsum[1]
 
 \section[External Communication]{External Communication using GSM SMS to an external API}
+\lipsum
 
 \section{Cost of Prototype / Sales Margin}
+\lipsum
 
 \end{document}  
