Draft prototype section

--- a/proposal.tex
+++ b/proposal.tex
@@ -62,7 +62,7 @@ A simple interface available on the World Wide Web for a user to login to and re
 
 An additional feature would be a ``Find my Bike'' whereby the user can click a button on the web app and the device will emit a beep for 45 seconds.
 
-\subsection{Protyping}
-
+\section{Prototyping}
+For the thesis, in addition to providing a technical document, I'd build a device prototype and minimum viable product web application. The device would be able to perform the basic function of detecting a collision and reporting it to the web app and the web app would be capable of informing an emergency contact. Current plans is to use an Arduino prototyping platform\footnote{\url{http://www.arduino.cc/}} for the device.
 
 \end{document}  
