--- a/proposal.tex
+++ b/proposal.tex
@@ -23,8 +23,10 @@
 \section{A Cyclist's Problem}
 One of the crucial moments for a cyclist is immediately after a collision, unfortunately it's also one of the most confusing. When a cyclist is involved in any sort of collision, they're subject severe injury, psychological shock, or being taken advantage of. More often than not, what they need is medical attention and police involvement. There is currently a problem with technology being under-utilized to provide a service to cyclists when they're dazed and confused seconds after a collision.
 
+What the average cyclist needs is help to already be on the way while they orient themselves and try move to safe spot to rest, if they can.
+
 \section{A Tangible Solution}
-I propose a potential solution to the problem: \onstar. By using technological advances in the past decade, \onstar, at its core, would use the Global Positioning System (GPS)\footnote{\url{http://en.wikipedia.org/wiki/Global_Positioning_System}}, 3-dimensional accelerometers, and the Short Message Service (SMS)\footnote{\url{http://en.wikipedia.org/wiki/Short_Message_Service}} to detect a collision and immediately communicate with an emergency contact, providing the cyclist's location and other relevant data so that they receive the help they may so desperately need. It'd be a simple set-and-forget device, accessible to the commuter for under \$100 and a trivial monthly service fee.
+To this problem I propose a potential solution: \onstar. By using technological advances in the past decade, \onstar, at its core, would use the Global Positioning System (GPS)\footnote{\url{http://en.wikipedia.org/wiki/Global_Positioning_System}}, 3-dimensional accelerometers, and the Short Message Service (SMS)\footnote{\url{http://en.wikipedia.org/wiki/Short_Message_Service}} to detect a collision and immediately communicate with an emergency contact, providing the cyclist's location and other relevant data so that they receive the help they may so desperately need. It'd be a simple set-and-forget device, accessible to the average commuting cyclist for under \$100 and an additional trivial monthly service fee.
 
 The \onstar\ project would be comprised of two components: an embedded device (the device), and a web-application interface (the web app).
 
