Add a footnote explaining monthly service fee

--- a/proposal.tex
+++ b/proposal.tex
@@ -26,7 +26,7 @@ One of the crucial moments for a cyclist is immediately after a collision, unfor
 What the average cyclist needs is help to already be on the way while they orient themselves and try move to safe spot to rest, if they can.
 
 \section{A Tangible Solution}
-To this problem I propose a potential solution: \onstar. By using technological advances in the past decade, \onstar, at its core, would use the Global Positioning System (GPS)\footnote{\url{http://en.wikipedia.org/wiki/Global_Positioning_System}}, 3-dimensional accelerometers, and the Short Message Service (SMS)\footnote{\url{http://en.wikipedia.org/wiki/Short_Message_Service}} to detect a collision and immediately communicate with an emergency contact, providing the cyclist's location and other relevant data so that they receive the help they may so desperately need. It'd be a simple set-and-forget device, accessible to the average commuting cyclist for under \$100 and an additional trivial monthly service fee.
+To this problem I propose a potential solution: \onstar. By using technological advances in the past decade, \onstar, at its core, would use the Global Positioning System (GPS)\footnote{\url{http://en.wikipedia.org/wiki/Global_Positioning_System}}, 3-dimensional accelerometers, and the Short Message Service (SMS)\footnote{\url{http://en.wikipedia.org/wiki/Short_Message_Service}} to detect a collision and immediately communicate with an emergency contact, providing the cyclist's location and other relevant data so that they receive the help they may so desperately need. It'd be a simple set-and-forget device, accessible to the average commuting cyclist for under \$100 and an additional trivial monthly service fee.\footnote{Due to the implementation strategy a monthly fee would have to be charged in order to recoup the costs of an activate phone line.}
 
 The \onstar\ project would be comprised of two components: an embedded device (the device), and a web-application interface (the web app).
 
