Rephrased final sentence of The Device paragraph

--- a/proposal.tex
+++ b/proposal.tex
@@ -31,7 +31,7 @@ To this problem I propose a potential solution: \onstar. By using technological 
 The \onstar\ project would be comprised of two components: an embedded device (the device), and a web-application interface (the web app).
 
 \subsection{The Device}
-The aim is to make a physical device that's small, resistant to theft, with a long battery life, and easily mountable onto a bike frame. It'd use the SMS to dispatch Application Programming Interface (API)\footnote{\url{http://en.wikipedia.org/wiki/Application_programming_interface}} calls to the web-app component who's responsible for contacting a phone number (via text-to-speech or text message) or e-mail address. Upon detecting a collision, the device will also begin to emit a continuous beep to inform the cyclist that it's been activated and the previously configured emergency contact has been informed of the event.
+The aim is to make a physical device that's small, resistant to theft, with a long battery life, and easily mountable onto a bike frame. It'd use the SMS to dispatch Application Programming Interface (API)\footnote{\url{http://en.wikipedia.org/wiki/Application_programming_interface}} calls to the web-app component who's responsible for contacting a phone number (via text-to-speech or text message) or e-mail address. Upon detecting a collision, the device will also begin to emit a continuous beep, informing the cyclist that it's been activated and their previously configured emergency contact has been contacted.
 
 \subsubsection{API Communication}
 {\em Twilio}, a cloud communications company, provides a service where you can programmatically send and receive SMS messages or phone calls using a 3rd party API.\footnote{\url{http://www.twilio.com/sms/api}} {\em Twilio}'s service would be the backbone for communication between the device and the web app.
