--- a/proposal.tex
+++ b/proposal.tex
@@ -28,7 +28,7 @@ What the average cyclist needs is help to already be on the way while they orien
 Having been in a few collisions myself, I can speak of their powerfully disorientating nature and I'm personally motivated by the solution presented in this proposal.
 
 \section{A Tangible Solution}
-To this problem I propose a potential solution: \onstar. By using technological advances in the past decade, \onstar, at its core, would use the Global Positioning System (GPS)\footnote{\url{http://en.wikipedia.org/wiki/Global_Positioning_System}}, 3-dimensional accelerometers, and the Short Message Service (SMS)\footnote{\url{http://en.wikipedia.org/wiki/Short_Message_Service}} to detect a collision and immediately communicate with an emergency contact, providing the cyclist's location and other relevant data so that they receive the help they may so desperately need. It'd be a simple set-and-forget device, accessible to the average commuting cyclist for under \$100 and an additional trivial monthly service fee.\footnote{Due to the implementation strategy a monthly fee would have to be charged in order to recoup the costs of an activate phone line.}
+To this problem I propose a potential solution: \onstar. By using technological advances in the past decade, \onstar, at its core, would use the Global Positioning System (GPS)\footnote{\url{http://en.wikipedia.org/wiki/Global_Positioning_System}}, 3-dimensional accelerometers, and the Short Message Service (SMS)\footnote{\url{http://en.wikipedia.org/wiki/Short_Message_Service}} to detect a collision and immediately communicate with an emergency contact, providing the cyclist's location and other relevant data so that they may receive the help they so desperately need. It'd be a simple set-and-forget device, accessible to the average commuting cyclist for under \$100 and an additional trivial monthly service fee.\footnote{Due to the implementation strategy a monthly fee would have to be charged in order to recoup the costs of an activate phone line.}
 
 The \onstar\ project would be comprised of two components: an embedded device (the device), and a web-application interface (the web app).
 
@@ -38,28 +38,28 @@ The aim is to make a physical device that's small, resistant to theft, with a lo
 \subsubsection{API Communication}
 {\em Twilio}, a cloud communications company, provides a service where you can programmatically send and receive SMS messages or phone calls using a 3rd party API.\footnote{\url{http://www.twilio.com/sms/api}} {\em Twilio}'s service would be the backbone for communication between the device and the web app.
 
-Every API request to the web app would fit under 140 characters (140 bytes), as would the responses. Presently, the core calls would be:
+Every API request to the web app would fit under 140 characters (140 bytes), as would their responses. Presently, the core calls would be:
 
 \begin{enumerate}
-	\item {\tt collision}: A collision has occurred at the following latitude and longitude GPS coordinates. The device guesses the collision type.
-	\item {\tt low-bat}: The battery on the device is low.
+	\item {\tt collision}: A collision has occurred at a GPS coordinate. The device provide its collision type guess.
+	\item {\tt low-bat}: The battery on the device is low and requires recharging.
 	\item {\tt beep}: The device is instructed to emit a beeping sound from the web app.
 \end{enumerate}
 
-The device would have bi-directional communication, capable of sending calls based on sensory data or performing actions based on SMS messages from the web app.
+The device would have bi-directional communication, capable of sending calls based on sensory data (e.g. {\tt collision}) or performing actions based on SMS messages from the web app (e.g. {\tt beep}).
 
 \subsubsection{Collision Detection}
-Using collision data collected from the Toronto Police Service, I'd research what G-forces usually define a `collision'. Additionally, personal experimentation would be performed to see what normal G-forces are generated from every day biking. Based on these two data sources, I should be able to define the threshold the device uses to determine whether or not a collision has occurred.
+Using collision data collected from the Toronto Police Service, I'd research what G-forces typically define a `collision'. Additionally, personal experimentation would be performed to see what normal G-forces are generated from every day biking. Based on these two data sources, I should be able to define a threshold the device uses to determine whether or not a collision has occurred.
 
-I plan to have the device guess at what type of collision the cyclist was involved in, be it a dangerous fall, ``T-bone'', ``head-on'', or ``rear-end'' collision with another vehicle.
+I plan to have the device guess at what type of collision the cyclist was involved in, be it a dangerous fall, ``T-bone'', ``head-on'', or ``rear-end'' collision with another vehicle. This is where the benefit of a 3-dimensional accelerometer would come into play (offering magnitude and direction), as opposed to a simple accelerometer that provides just magnitude.
 
 \subsection{The Web App}
 Written in Ruby\footnote{\url{https://www.ruby-lang.org/en/}} (using the Ruby on Rails framework{\footnote{\url{http://rubyonrails.org/}}) the web application would be responsible for an API back-end for the device and graphical front-end for the user.
 
 \subsubsection{The Back-End API}
-An API would be exposed such that the device is capable of communicating to the web app and vice versa using {\em Twilio} as middleware. Essentially, the back-end API would be communicating with {\em Twilio}'s API, who's operating on behalf of the device.
+An API would be exposed such that the device is capable of communicating to the web app and vice versa using {\em Twilio} as middleware. Essentially, the back-end API's sole purpose is to allow the device to control the web app.
 
-Since the embedded device is limited in capability, it's API may not support the verbosity or variable-length nature of such popular data-interchange formats like JSON\footnote{\url{http://www.json.org/}} or XML.\footnote{\url{http://en.wikipedia.org/wiki/XML}} As a result, I will define a custom API message structure (the payload) that {\em Twilio} would deliver to the device to perform an action. It'd be fixed-length and its detailed design would make itself apparent as the prototype is constructed.
+Since the embedded device is limited in capability, it's API may not support the verbosity or variable-length nature of popular data-interchange formats such as JSON\footnote{\url{http://www.json.org/}} or XML.\footnote{\url{http://en.wikipedia.org/wiki/XML}} As a result, I will define a custom API message structure (the payload) that {\em Twilio} would deliver to the device to perform an action. It'd be fixed-length and its detailed design would make itself apparent when the prototype is constructed.
 
 \subsubsection{The Front-End GUI}
 A simple interface available on the World Wide Web for a user to login to and register their device, configure emergency contacts \& corresponding message to be sent, and view previously detected collisions plotted on a map using the collected GPS data.
@@ -68,25 +68,25 @@ An additional feature would be a ``Find my Bike'' whereby the user can click a b
 
 \section{Prototype and Technical Document}
 \subsection{Prototype}
-For the thesis, in addition to providing a technical document, I'd build a device prototype and minimum viable product web application. The device would be able to perform the basic function of detecting a collision and reporting it to the web app and the web app would be capable of informing an emergency contact. Current plans is to use an Arduino prototyping platform\footnote{\url{http://www.arduino.cc/}} for the device.
+For the thesis, I would build a device prototype and minimum viable product web application. The device would be able to perform the basic function of detecting a collision and reporting it to the web app and the web app would be capable of informing an emergency contact. Current plans is to use an Arduino prototyping platform\footnote{\url{http://www.arduino.cc/}} for the device.
 
 \subsection{Technical Document}
-The thesis will include a technical document, providing a full schematic of the prototype and architecture of the web app. Furthermore, a detailed description of the custom communication API will be defined.
+The thesis will include a technical document providing a full schematic of the prototype and architecture of the web app. Furthermore, a detailed description of the custom communication API will be defined.
 
 In addition to the specifics and implementation details of the prototype, the G-force data collected from the TPS and personal experiments will be presented. Conclusions and design decisions from the results will also be described.
 
 \section{Required Background Reading \& Research}
 The solution described above is quite a mouthful, utilizing multiple technologies to provide a unique and effective product. The following topics and technologies would have to be researched in order to have enough knowledge to carry out the thesis:
 
-\subsection{Prototyping Arduino}
-Arduino uses the C programming language, which I'm already mildly familiar with in the context of personal computers running Linux. However, the Arduino is an embedded device, and I'll have to learn the constraints of writing software for such limited capacity.
+\subsection{Arduino \& Embedded C}
+Arduino uses the C programming language, which I'm already mildly familiar with in the context of personal computers running Linux. However, the Arduino is an embedded device, and I'll have to learn the constraints of writing software in such a limited capacity.
 
-For every component of the device (GPS, GSM, 3D accelerometer), I'll have to source the component I wish to use, learn about it via its data sheets, and then integrate it into the Arduino board. I presently have no experience or knowledge in embedded GPS chips, full-stack GSM devices, or 3D accelerometers. Background research will go mostly into GSM SMS communications on an embedded device, as that'd be the most challenging.
+For every component of the device (GPS, GSM, 3D accelerometer, lithium-ion battery, etc.), I'll have to source each component I wish to use, learn about it via its data sheets, and then integrate it into the Arduino board. I presently have no experience or knowledge in embedded GPS chips, full-stack GSM devices, or 3D accelerometers. Background research will go mostly into GSM SMS communications on an embedded device, as that'd be the most challenging and complex.
 
 Furthermore, almost every single component that'd be used in the prototype will require extensive research in how it works, what type is right for this thesis, and how it can be integrated into the device.
 
 \subsection{Collision Data}
-In order to program the device correctly, data on what G-forces are normally exerted on a bike during a collision will be needed. I'll have to establish contact and cooperation of the Toronto Police Service to access their scene reconstruction information in hopes to get an introductory understanding of occurs during a collision.
+In order to program the device correctly, data on what G-forces are normally exerted on a bike during a collision will be needed. I'll have to establish contact and cooperation of the Toronto Police Service to access their scene reconstruction information in hopes to get an introductory understanding of what occurs during a collision.
 
 \subsection{{\em Twilio} API}
 The documentation\footnote{\url{http://www.twilio.com/docs/api}} and libraries\footnote{\url{https://github.com/twilio/twilio-ruby}} for the {\em Twilio} API will have to be read, understood, and applied both in hardware and in software in order for the device to communicate to the web app.
