Use microtype and todonotes packages

--- a/proposal.tex
+++ b/proposal.tex
@@ -4,6 +4,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{lipsum}
 \usepackage{url}
+\usepackage{microtype}
+\usepackage{todonotes}
 
 \newcommand{\onstar}{{\em OnStar for Bikes}}
 
