TODO for mentioning bulk SIM subscription

--- a/proposal.tex
+++ b/proposal.tex
@@ -78,6 +78,7 @@ The thesis will include a technical document providing a full schematic of the p
 In addition to the specifics and implementation details of the prototype, the G-force data collected from the TPS and personal experiments will be presented. Conclusions and design decisions from the results will also be described.
 
 \section{Required Background Reading \& Research}
+\todo{Mention the background reading required for bulk SIM subscription from a carrier like Bell or Rogers}
 The solution described above is quite a mouthful, utilizing multiple technologies to provide a unique and effective product. The following topics and technologies would have to be researched in order to have enough knowledge to carry out the thesis:
 
 \subsection{Arduino \& Embedded C}
