Add CC BY-SA 3.0 license to all documents in repo;
Also mentions MIT license will be used for the code.

--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -1,4 +1,17 @@
 %%!TEX encoding = UTF-8 Unicode
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Thesis Proposal: OnStar for Bikes: Automatic collision detection and response
+% using embedded devices (aka "OnStar for Bikes")
+% (C) Copyright 2013 by Justin Bull
+%
+% OnStar for Bikes is licensed under a
+% Creative Commons Attribution-ShareAlike 3.0 Unported License.
+%
+% You should have received a copy of the license along with this
+% work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \documentclass[titlepage]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -94,4 +107,4 @@ In order to program the device correctly, data on what G-forces are normally exe
 \subsection{{\em Twilio} API}
 The documentation\footnote{\url{http://www.twilio.com/docs/api}} and libraries\footnote{\url{https://github.com/twilio/twilio-ruby}} for the {\em Twilio} API will have to be read, understood, and applied both in hardware and in software in order for the device to communicate to the web app.
 
-\end{document}  
+\end{document}
