--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -19,6 +19,10 @@
 \usepackage{url}
 \usepackage{microtype}
 \usepackage{todonotes}
+\usepackage{ccicons}
+\usepackage{graphicx}
+
+\graphicspath{ {./images/} }
 
 \newcommand{\onstar}{{\em OnStar for Bikes}}
 
@@ -30,10 +34,33 @@
 	\texttt{justin.bull@ryerson.ca}\\
 	Department of Computer Science,\\
 	Ryerson University\\}
-\date{September 28, 2013}
+\date{September 28, 2013\\
+	\vspace{36pt}
+	{\Huge \ccbysa}}
 
 \begin{document}
 \maketitle
+
+\null
+\vfill
+\noindent
+Copyright \copyright\ 2013 Justin A. S. Bull.\\
+Some Rights Reserved.
+
+\noindent
+\\
+\includegraphics*[scale=0.5]{cclogo.eps}
+\\
+
+\noindent
+This work is licensed under the terms of \ccbysa\ Creative Commons
+Attribution-ShareAlike 3.0 Unported license available from
+\url{http://www.creativecommons.org/}. Accordingly, you are free to copy, distribute,
+display, and perform the work under the following conditions: (1) you must give the
+original author credit, (2) you may not use this work for commercial purposes, and
+(3) you may not alter, transform, or build upon this work.
+
+\clearpage
 
 \section{A Cyclist's Problem}
 One of the crucial moments for a cyclist is immediately after a collision, unfortunately it's also one of the most confusing. When a cyclist is involved in any sort of collision, they're subject severe injury, psychological shock, or being taken advantage of. More often than not, what they need is medical attention and police involvement. There is currently a problem with technology being under-utilized to provide a service to cyclists when they're dazed and confused seconds after a collision.
