--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -43,21 +43,25 @@
 \null
 \vfill
 \noindent
+{\small
 Copyright \copyright\ 2013 Justin A. S. Bull.\\
 Some Rights Reserved.
 
 \noindent
 \\
-\includegraphics*[scale=0.5]{cclogo.eps}
+\includegraphics*[scale=0.4]{cclogo.eps}
 \\
 
 \noindent
 This work is licensed under the terms of \ccbysa\ Creative Commons
 Attribution-ShareAlike 3.0 Unported license available from
 \url{http://www.creativecommons.org/}. Accordingly, you are free to copy, distribute,
-display, and perform the work under the following conditions: (1) you must give the
-original author credit, (2) you may not use this work for commercial purposes, and
-(3) you may not alter, transform, or build upon this work.
+display, and perform the work under the following conditions:
+\begin{enumerate}
+	\item {\large \ccAttribution} You must attribute the work in the manner specified by the author or licensor (but not in any way that suggests that they endorse you or your use of the work).
+	\item {\large \ccShareAlike} If you alter, transform, or build upon this work, you may distribute the resulting work only under the same or similar license to this one.
+\end{enumerate}
+}
 
 \clearpage
 
