Make a license page in webapp, update CC license to 4.0

--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -6,10 +6,10 @@
 % (C) Copyright 2013 by Justin Bull
 %
 % OnStar for Bikes is licensed under a
-% Creative Commons Attribution-ShareAlike 3.0 Unported License.
+% Creative Commons Attribution-ShareAlike 4.0 International License.
 %
 % You should have received a copy of the license along with this
-% work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.
+% work.  If not, see <http://creativecommons.org/licenses/by-sa/4.0/>.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[titlepage]{article}
@@ -44,7 +44,7 @@
 \vfill
 \noindent
 {\small
-Copyright \copyright\ 2013 Justin A. S. Bull.\\
+Copyright \copyright\ 2013 Justin A. S. Bull, https://www.justinbull.ca\\
 Some Rights Reserved.
 
 \noindent
@@ -54,12 +54,12 @@ Some Rights Reserved.
 
 \noindent
 This work is licensed under the terms of \ccbysa\ Creative Commons
-Attribution-ShareAlike 3.0 Unported license available from
+Attribution-ShareAlike 4.0 International license available from
 \url{http://www.creativecommons.org/}. Accordingly, you are free to copy, distribute,
 display, and perform the work under the following conditions:
 \begin{enumerate}
-	\item {\large \ccAttribution} You must attribute the work in the manner specified by the author or licensor (but not in any way that suggests that they endorse you or your use of the work).
-	\item {\large \ccShareAlike} If you alter, transform, or build upon this work, you may distribute the resulting work only under the same or similar license to this one.
+	\item {\large \ccAttribution} You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.
+	\item {\large \ccShareAlike} If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.
 \end{enumerate}
 }
 
